# cliboard

./: .env.example  .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
scripts/: eval-llm-matching.mjs  generate-app-icon.mjs
src/: App.css  App.tsx  clipboardHistory.test.ts  clipboardHistory.ts  historyLimit.test.ts  historyLimit.ts  index.css  logRedaction.test.ts  logRedaction.ts  searchEvaluation.test.ts  searchFilters.test.ts  searchFilters.ts  snippetSearch.test.ts  snippetSearch.ts  usageLearning.test.ts  usageLearning.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
